fix spacing of foodinfo on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -543,7 +543,7 @@ li.social ul li,
 }
 
 .foodinfo {
-    padding: 10px 20px 20px;
+    padding: 10px 20px 40px;
     display: block;
 }
 
